# gazebo-plugins

libs/msgs/: AttentionMessage.pb.cpp  AttentionMessage.pb.h  BeaconSignal.pb.h  ExplorationInfo.pb.h  GameInfo.pb.cpp  MachineReport.pb.h  OrderInfo.pb.h  RobotInfo.pb.cpp  RobotInfo.pb.h  Sync.pb.cpp  Sync.pb.h  TimeSync.pb.cpp  TimeSync.pb.h  TimeSync.proto
llsf/: CMakeLists.txt  llsf.world
llsf/src/: data_table.cpp  data_table.h  light_control.cpp  light_control.h  llsf_world.cpp  llsf_world.h  puck_holder.h  puck_localization.cpp  refbox_comm.cpp  refbox_comm.h  rfid_sensors.cpp  rfid_sensors.h  simulation_control.cpp  time_sync.cpp  time_sync.h
llsf/src/msgs/: BeaconSignal.pb.cpp  ExplorationInfo.pb.cpp  GameInfo.pb.h  MachineReport.pb.cpp  OrderInfo.pb.cpp  RobotCommands.pb.cpp  RobotCommands.pb.h
llsf/src/msgs/.deps_fawkes/: BeaconSignal.pb.d  GameInfo.pb.d  MachineInfo.pb.d  MachineReport.pb.d  Pose2D.pb.d  PuckInfo.pb.d  RobotCommands.pb.d  RobotInfo.pb.d  Sync.pb.d  Time.pb.d  VersionInfo.pb.d
movingRobotino/: CMakeLists.txt  model.config  model.sdf  model.sdf~  modelControl.cc  modelControl.cc~
movingRobotino/src/: CMakeLists.txt~  CMakeListsOld.txt  config.h  device.cpp  device.cpp~  device.h  device.h~  gps.cpp  gps.h  gyro.cpp  gyro.h  laserSensor.cpp  laserSensor.h  messageDisplay.cpp  messageDisplay.cpp~  messageDisplay.h  modelControl.h  (+9 more)
robotino/: CMakeLists.txt
robotino/src/: config.h  gps.h  gripper_laser_sensor.cpp  infraredPuckSensor.cpp  machineVision.cpp  machineVision.h  motor.cpp  puck_detection.cpp  puck_detection.h  puck_holder.cpp  puck_holder.h  robotino.cpp  robotino.h  simDevice.cpp  simDevice.h
world/: CMakeLists.txt~  world.cc  world.world  world.world~
(+5 files in other folders)
